# slimt-sys

./: .gitmodules  Cargo.toml  build.rs
bindings/: CMakeLists.txt  slimt_wrapper.cpp
src/: lib.rs
tests/: regression.rs
